xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__predicate_index.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "run(\"(1, 2, 3)[2]\")"
---
Ok(
    Sequence(
        RefCell {
            value: Sequence {
                items: [
                    Atomic(
                        Integer(
                            2,
                        ),
                    ),
                ],
            },
        },
    ),
)
