xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__predicate_index_all.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "run(\"(1, 2, 3)[fn:position()]\")"
---
Ok(
    Sequence(
        RefCell {
            value: Sequence {
                items: [
                    Atomic(
                        Integer(
                            1,
                        ),
                    ),
                    Atomic(
                        Integer(
                            2,
                        ),
                    ),
                    Atomic(
                        Integer(
                            3,
                        ),
                    ),
                ],
            },
        },
    ),
)
