xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__predicate_multiple.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "run(\"(1, 2, 3)[. ge 2][. ge 3]\")"
---
Ok(
    Sequence(
        RefCell {
            value: Sequence {
                items: [
                    Atomic(
                        Integer(
                            3,
                        ),
                    ),
                ],
            },
        },
    ),
)
