xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__range.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "run(\"1 to 5\")"
---
Ok(
    Sequence(
        RefCell {
            value: Sequence {
                items: [
                    Atomic(
                        Integer(
                            1,
                        ),
                    ),
                    Atomic(
                        Integer(
                            2,
                        ),
                    ),
                    Atomic(
                        Integer(
                            3,
                        ),
                    ),
                    Atomic(
                        Integer(
                            4,
                        ),
                    ),
                    Atomic(
                        Integer(
                            5,
                        ),
                    ),
                ],
            },
        },
    ),
)
