xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__range_equal.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "run(\"1 to 1\")"
---
Ok(
    Atomic(
        Integer(
            1,
        ),
    ),
)
