xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__range_greater.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "run(\"5 to 1\")"
---
Ok(
    Sequence(
        RefCell {
            value: Sequence {
                items: [],
            },
        },
    ),
)
