xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__sequence_predicate_sequence_empty.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "run(\"(1, 2, 3)[()]\")"
---
Ok(
    Sequence(
        RefCell {
            value: Sequence {
                items: [],
            },
        },
    ),
)
