xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__sequence_predicate_sequence_too_long.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "run(\"(1, 2, 3)[(2, 3)]\")"
---
Err(
    XPTY0004 {
        src: "(1, 2, 3)[(2, 3)]",
        span: SourceSpan {
            offset: SourceOffset(
                10,
            ),
            length: SourceOffset(
                6,
            ),
        },
    },
)
